# TermTick-cpp-old

./: .gitmodules  CMakeLists.txt  README.md  cmake-run.sh
src/: main.cpp
src/config/: config.cpp  config.hpp
src/tui/: app.cpp  app.hpp
